feat: add header

--- a/singolo1.html
+++ b/singolo1.html
@@ -6,5 +6,24 @@
     <title>Singolo1</title>
     <link rel="stylesheet" href="singolo1.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <h1 class="header__logo">Singolo<span>*</span></h1>
+          <nav class="header__menu">
+            <ul class="header__menu--list">
+              <li class=" header__menu--item header__menu--active">
+                <a href="#">Home</a>
+              </li>
+              <li class="header__menu--item"><a href="#">Services</a></li>
+              <li class="header__menu--item"><a href="#">Portfolio</a></li>
+              <li class="header__menu--item"><a href="#">About</a></li>
+              <li class="header__menu--item"><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
