feat: add arrows to slider

--- a/singolo1.html
+++ b/singolo1.html
@@ -25,5 +25,25 @@
         </div>
       </div>
     </header>
+
+    <main class="main">
+      <div class="slider">
+        <div class="container">
+          <div class="slider__inner">
+            <div class="slider__prev"></div>
+            <div class="slider__iphone">
+              <div class="slider__iphone--vertical"></div>
+              <div class="slider__iphone--horizontal"></div>
+            </div>
+            <div class="slider__next"></div>
+          </div>
+        </div>
+      </div>
+      <div class="services">
+        <div class="container">
+          <div class="services__inner"></div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
