feat: add services & etc.

--- a/singolo1.html
+++ b/singolo1.html
@@ -32,8 +32,20 @@
           <div class="slider__inner">
             <div class="slider__prev"></div>
             <div class="slider__iphone">
-              <div class="slider__iphone--vertical"></div>
-              <div class="slider__iphone--horizontal"></div>
+              <img
+                class="slider__iphone--vertical"
+                src="assets/img/iphone-vertical.png"
+                alt="iphone-vertical"
+                width="240"
+                height="483"
+              />
+              <img
+                class="slider__iphone--horizontal"
+                src="assets/img/iphone-horizontal.png"
+                alt="iphone-horizontal"
+                width="484"
+                height="240"
+              />
             </div>
             <div class="slider__next"></div>
           </div>
@@ -41,7 +53,63 @@
       </div>
       <div class="services">
         <div class="container">
-          <div class="services__inner"></div>
+          <div class="services__inner">
+            <div class="services__title">
+              <h2>Our Services</h2>
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum. Duis mollis, non commodo luctus, nisi erat
+                porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus,
+                tellus ac cursus commodo, tortor mauris condimentum nibh.
+              </p>
+            </div>
+            <div class="services__list">
+              <ul class="services__list--items">
+                <li class="services__list--item services__list--item--pen">
+                  <h3>Custom Design</h3>
+                  <p>
+                    Curabitur vestibulum eget mauris quis laoreet. Phasellus in
+                    quam laoreet, viverra lacus ut, ultrices velit.
+                  </p>
+                </li>
+                <li class="services__list--item services__list--item--bulb">
+                  <h3>Inovative Ideas</h3>
+                  <p>
+                    Quisque luctus, quam eget molestie com&shymodo, lacus purus
+                    cursus purus, nec rutrum tellus dolor id lorem.
+                  </p>
+                </li>
+                <li class="services__list--item services__list--item--heart">
+                  <h3>Love Is The Answer</h3>
+                  <p>
+                    Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                    turpis, et consequat felis. Quisque condimentum.
+                  </p>
+                </li>
+                <li class="services__list--item services__list--item--phone">
+                  <h3>Responsive Layout</h3>
+                  <p>
+                    Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
+                    blandit nunc ligula. Prae&shysent elit leo.
+                  </p>
+                </li>
+                <li class="services__list--item services__list--item--dialog">
+                  <h3 class="ls-minus">24 / 7 Support</h3>
+                  <p>
+                    Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
+                    Nulla a sem erat. Pellen&shytesque egestas venenatis lorem .
+                  </p>
+                </li>
+                <li class="services__list--item services__list--item--star">
+                  <h3 class="ls-plus">Feel Like A Star</h3>
+                  <p>
+                    Quisque hendrerit purus dapibus, ornare nibh vitae, viverra
+                    nibh. Fusce vitae aliquam tellus.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </main>
