chore: add final version singolo1

--- a/singolo1.html
+++ b/singolo1.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Singolo1</title>
+    <title>Singolo. Part 1</title>
+    <link rel="stylesheet" href="fonts.css" />
     <link rel="stylesheet" href="singolo1.css" />
   </head>
   <body>
@@ -35,17 +36,21 @@
               <img
                 class="slider__iphone--vertical"
                 src="assets/img/iphone-vertical.png"
-                alt="iphone-vertical"
-                width="240"
-                height="483"
+                alt="Vertical-Iphone"
+                width="215"
+                height="458"
               />
+              <div class="slider__iphone--vertical--shadow"></div>
+              <div class="slider__iphone--vertical--pic"></div>
               <img
                 class="slider__iphone--horizontal"
                 src="assets/img/iphone-horizontal.png"
                 alt="iphone-horizontal"
-                width="484"
-                height="240"
+                width="458"
+                height="215"
               />
+              <div class="slider__iphone--horizontal--pic"></div>
+              <div class="slider__iphone--horizontal--shadow"></div>
             </div>
             <div class="slider__next"></div>
           </div>
@@ -94,14 +99,14 @@
                   </p>
                 </li>
                 <li class="services__list--item services__list--item--dialog">
-                  <h3 class="ls-minus">24 / 7 Support</h3>
+                  <h3 class="ls-minus-s">24 / 7 Support</h3>
                   <p>
                     Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
                     Nulla a sem erat. Pellen&shytesque egestas venenatis lorem .
                   </p>
                 </li>
                 <li class="services__list--item services__list--item--star">
-                  <h3 class="ls-plus">Feel Like A Star</h3>
+                  <h3 class="ls-minus-f">Feel Like A Star</h3>
                   <p>
                     Quisque hendrerit purus dapibus, ornare nibh vitae, viverra
                     nibh. Fusce vitae aliquam tellus.
