feat: add styles to singolo2

--- a/singolo2.html
+++ b/singolo2.html
@@ -34,7 +34,7 @@
           />
           <polygon
             points="82.679,40.499 82.679,27.894 76.455,27.894 76.455,40.499 63.869,40.499 63.869,46.793 76.455,46.793 
-            76.455,59.477 82.679,59.477 82.679,46.793 95.328,46.793 95.328,40.499 		"
+            76.455,59.477 82.679,59.477 82.679,46.793 95.328,46.793 95.328,40.499"
           />
         </g>
       </symbol>
@@ -68,254 +68,267 @@
       </symbol>
     </svg>
 
-    <section class="portfolio__inner">
+    <section class="portfolio">
       <div class="container">
-        <div class="portfolio__title">
-          <h2>Portfolio</h2>
-          <p>
-            Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
-            eget lacinia odio sem nec elit.
-          </p>
+        <div class="portfolio__inner">
+          <div class="portfolio__title">
+            <h2>Portfolio</h2>
+            <p>
+              Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
+              eget lacinia odio sem nec elit.
+            </p>
+          </div>
           <div class="portfolio__list">
             <ul class="portfolio__list--items">
-              <li class="portfolio__list--item">All</li>
+              <li class="portfolio__list--item portfolio__list--active">
+                All
+              </li>
               <li class="portfolio__list--item">Web Design</li>
               <li class="portfolio__list--item">Graphic Design</li>
               <li class="portfolio__list--item">Artwork</li>
             </ul>
-            <div class="portfolio__images">
-              <ul class="portfolio__images--items">
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-01.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-02.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-03.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-04.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-05.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-06.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-07.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-08.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-09.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-10.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-11.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-                <li class="portfolio__images--item">
-                  <img
-                    src="assets/img/portfolio/portfolio-img-12.jpg"
-                    alt="portfolio-img"
-                    width="220"
-                    height="187"
-                  />
-                </li>
-              </ul>
-            </div>
+          </div>
+          <div class="portfolio__images">
+            <ul class="portfolio__images--items">
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-01.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-02.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-03.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-04.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-05.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-06.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-07.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-08.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-09.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-10.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-11.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-12.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+              <li class="portfolio__images--item">
+                <img
+                  src="assets/img/portfolio/portfolio-img-12.jpg"
+                  alt="portfolio-img"
+                  width="220"
+                  height="187"
+                />
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="about__inner">
+    <section class="about">
       <div class="container">
-        <div class="about__title">
-          <h2>About Us</h2>
-          <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
-            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
-            lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
-            tortor mauris condimentum nibh.
-          </p>
-        </div>
-
-        <div class="about__team">
-          <div class="about__team--item">
-            <img src="assets/img/about/about-01.jpg" alt="about-us-img" />
-            <h3>Adam Jensen</h3>
+        <div class="about__inner">
+          <div class="about__title">
+            <h2>About Us</h2>
             <p>
-              Quisque luctus, quam eget molestie commodo, lacus purus cursus
-              purus, nec rutrum tellus dolor id lorem.
+              Fusce dapibus, tellus ac cursus commodo, tortor mauris
+              condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
+              ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac
+              cursus commodo, tortor mauris condimentum nibh.
             </p>
-            <ul class="about__team--item--social">
-              <li class="facebook">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="google">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#google"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="twitter">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="linkedin">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
           </div>
+          <div class="about__team">
+            <div class="about__team--item">
+              <img src="assets/img/about/about-01.jpg" alt="about-us-img" />
+              <h3>Adam Jensen</h3>
+              <p>
+                Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                purus, nec rutrum tellus dolor id lorem.
+              </p>
+              <ul class="about__team--item--social">
+                <li class="facebook">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="google">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#google"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="twitter">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="linkedin">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
 
-          <div class="about__team--item">
-            <img src="assets/img/about/about-02.jpg" alt="about-us-img" />
-            <h3>Desmond Miles</h3>
-            <p>
-              Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
-              laoreet, viverra lacus ut, ultrices velit.
-            </p>
-            <ul class="about__team--item--social">
-              <li class="facebook">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="google">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#google"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="twitter">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="linkedin">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+            <div class="about__team--item">
+              <img src="assets/img/about/about-02.jpg" alt="about-us-img" />
+              <h3>Desmond Miles</h3>
+              <p>
+                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+                laoreet, viverra lacus ut, ultrices velit.
+              </p>
+              <ul class="about__team--item--social">
+                <li class="facebook">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="google">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#google"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="twitter">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="linkedin">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
 
-          <div class="about__team--item">
-            <img src="assets/img/about/about-03.jpg" alt="about-us-img" />
-            <h3>Scolara Visari</h3>
-            <p>
-              Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis,
-              et consequat felis. Quisque condimentum.
-            </p>
-            <ul class="about__team--item--social">
-              <li class="facebook">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="google">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#google"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="twitter">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="linkedin">
-                <a href="#">
-                  <svg>
-                    <use xlink:href="#linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="about__team--item">
+              <img src="assets/img/about/about-03.jpg" alt="about-us-img" />
+              <h3>Scolara Visari</h3>
+              <p>
+                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                turpis, et consequat felis. Quisque condimentum.
+              </p>
+              <ul class="about__team--item--social">
+                <li class="facebook">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="google">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#google"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="twitter">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="linkedin">
+                  <a href="#">
+                    <svg class="social">
+                      <use xlink:href="#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
