--- a/singolo3.html
+++ b/singolo3.html
@@ -116,7 +116,7 @@
     </section>
 
     <footer class="footer">
-      <div class="con">
+      <div class="container">
         <div class="footer__inner">
           <div class="footer__copyright">
             <p>&copy;Copyright</p>
