feat: add styles to get-a-quote section

--- a/singolo3.html
+++ b/singolo3.html
@@ -104,9 +104,17 @@
               </p>
               <address>
                 <ul>
-                  <li>Elm St. 14/05 Lost City</li>
-                  <li>03528 331 86 35</li>
-                  <li>info@singolo.com</li>
+                  <li>
+                    <a
+                      href="https://www.google.ru/maps/@53.8938188,27.5664143,12z"
+                      target="_blank"
+                      >Elm St. 14/05 Lost City</a
+                    >
+                  </li>
+                  <li><a href="tel:035283318635">03528 331 86 35</a></li>
+                  <li>
+                    <a href="mailto:info@singolo.com">info@singolo.com</a>
+                  </li>
                 </ul>
               </address>
             </div>
