--- a/singolo3.html
+++ b/singolo3.html
@@ -127,7 +127,7 @@
       <div class="container">
         <div class="footer__inner">
           <div class="footer__copyright">
-            <p>&copy;Copyright</p>
+            <p>&copy; Copyright 2013</p>
           </div>
           <div class="footer__social">
             <ul>
