--- a/index.html
+++ b/index.html
@@ -74,13 +74,11 @@
           <h1 class="header__logo">Singolo<span>*</span></h1>
           <nav class="header__menu">
             <ul>
-              <li class="header__menu_active">
-                <a href="#">Home</a>
-              </li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a class="active" href="#">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#quote">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -93,22 +91,24 @@
           <div class="slider__inner">
             <div class="slider__prev"></div>
             <div class="slider__iphone">
-              <img
-                class="slider__iphone_vertical"
-                src="assets/img/slider/iphone-vertical.png"
-                alt="Vertical-Iphone"
-                width="215"
-                height="458"
-              />
+              <div class="slider__iphone_vertical">
+                <img
+                  src="assets/img/slider/iphone-vertical.svg"
+                  alt="Vertical-Iphone"
+                  width="215"
+                  height="458"
+                />
+              </div>
               <div class="slider__iphone_vertical_shadow"></div>
               <div class="slider__iphone_vertical_pic"></div>
-              <img
-                class="slider__iphone_horizontal"
-                src="assets/img/slider/iphone-horizontal.png"
-                alt="iphone-horizontal"
-                width="458"
-                height="215"
-              />
+              <div class="slider__iphone_horizontal">
+                <img
+                  src="assets/img/slider/iphone-horizontal.svg"
+                  alt="iphone-horizontal"
+                  width="458"
+                  height="215"
+                />
+              </div>
               <div class="slider__iphone_horizontal_pic"></div>
               <div class="slider__iphone_horizontal_shadow"></div>
             </div>
@@ -117,7 +117,7 @@
         </div>
       </section>
 
-      <section class="services">
+      <section id="services" class="services">
         <div class="container">
           <div class="services__inner">
             <div class="services__title">
@@ -179,7 +179,7 @@
         </div>
       </section>
 
-      <section class="portfolio">
+      <section id="portfolio" class="portfolio">
         <div class="container">
           <div class="portfolio__inner">
             <div class="portfolio__title">
@@ -303,7 +303,7 @@
         </div>
       </section>
 
-      <section class="about">
+      <section id="about" class="about">
         <div class="container">
           <div class="about__inner">
             <div class="about__title">
@@ -435,7 +435,7 @@
         </div>
       </section>
 
-      <section class="quote">
+      <section id="quote" class="quote">
         <div class="container">
           <div class="quote__inner for-moz">
             <div class="quote__title">
@@ -554,5 +554,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
