feat: add slider

--- a/index.html
+++ b/index.html
@@ -89,30 +89,41 @@
       <section class="slider">
         <div class="container">
           <div class="slider__inner">
-            <div class="slider__prev"></div>
-            <div class="slider__iphone">
-              <div class="slider__iphone_vertical">
-                <img
-                  src="assets/img/slider/iphone-vertical.svg"
-                  alt="Vertical-Iphone"
-                  width="215"
-                  height="458"
-                />
+            <div class="slider__prev arrow"></div>
+            <div class="slider__container">
+              <div class="slider__iphone_main phone slider-active">
+                <div class="slider__iphone_vertical">
+                  <img
+                    src="assets/img/slider/iphone-vertical.svg"
+                    alt="Vertical-Iphone"
+                    width="215"
+                    height="458"
+                  />
+                </div>
+                <div class="slider__iphone_vertical_shadow"></div>
+                <div class="slider__iphone_vertical_pic"></div>
+                <div class="slider__iphone_horizontal">
+                  <img
+                    src="assets/img/slider/iphone-horizontal.svg"
+                    alt="iphone-horizontal"
+                    width="458"
+                    height="215"
+                  />
+                </div>
+                <div class="slider__iphone_horizontal_pic"></div>
+                <div class="slider__iphone_horizontal_shadow"></div>
               </div>
-              <div class="slider__iphone_vertical_shadow"></div>
-              <div class="slider__iphone_vertical_pic"></div>
-              <div class="slider__iphone_horizontal">
+              <div class="slider__iphone_middle phone">
                 <img
-                  src="assets/img/slider/iphone-horizontal.svg"
-                  alt="iphone-horizontal"
-                  width="458"
-                  height="215"
+                  src="assets/img/slider/iphone-middle.png"
+                  alt="Middle-Iphone"
+                  width="516"
+                  height="513"
                 />
+                <div class="slider__iphone_middle_pic"></div>
               </div>
-              <div class="slider__iphone_horizontal_pic"></div>
-              <div class="slider__iphone_horizontal_shadow"></div>
             </div>
-            <div class="slider__next"></div>
+            <div class="slider__next arrow"></div>
           </div>
         </div>
       </section>
