fix: fix some inaccuracies

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h1 class="header__logo">Singolo<span>*</span></h1>
           <nav class="header__menu">
             <ul>
-              <li><a class="active" href="#">Home</a></li>
+              <li><a class="menu-active" href="#">Home</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#about">About</a></li>
@@ -205,7 +205,7 @@
             </div>
             <div class="portfolio__list">
               <ul>
-                <li class="active">All</li>
+                <li class="tab-active">All</li>
                 <li>Web Design</li>
                 <li>Graphic Design</li>
                 <li>Artwork</li>
