feat: add scroll-navigation & new image-shuffle

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h1 class="header__logo">Singolo<span>*</span></h1>
           <nav class="header__menu">
             <ul>
-              <li><a class="menu-active" href="#">Home</a></li>
+              <li><a class="menu-active" href="#slider">Home</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#about">About</a></li>
@@ -86,7 +86,7 @@
     </header>
 
     <main class="main">
-      <section class="slider">
+      <section id="slider" class="slider for-scroll">
         <div class="container">
           <div class="slider__inner">
             <div class="slider__prev arrow"></div>
@@ -131,7 +131,7 @@
         </div>
       </section>
 
-      <section id="services" class="services">
+      <section id="services" class="services for-scroll">
         <div class="container">
           <div class="services__inner">
             <div class="services__title">
@@ -193,7 +193,7 @@
         </div>
       </section>
 
-      <section id="portfolio" class="portfolio">
+      <section id="portfolio" class="portfolio for-scroll">
         <div class="container">
           <div class="portfolio__inner">
             <div class="portfolio__title">
@@ -315,7 +315,7 @@
         </div>
       </section>
 
-      <section id="about" class="about">
+      <section id="about" class="about for-scroll">
         <div class="container">
           <div class="about__inner">
             <div class="about__title">
@@ -447,7 +447,7 @@
         </div>
       </section>
 
-      <section id="quote" class="quote">
+      <section id="quote" class="quote for-scroll">
         <div class="container">
           <div class="quote__inner for-moz">
             <div class="quote__title">
