fix: fix scroll-navigation

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     name="message"
                     placeholder="Describe your project in detail..."
                   ></textarea>
-                  <button class="for-moz" type="submit">Submit</button>
+                  <button class="for-moz" type="submit">Send</button>
                 </form>
               </div>
               <div class="quote__info_contact for-moz">
