--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               </p>
             </div>
             <div class="about__team">
-              <div class="about__team_item">
+              <div class="about__team-item">
                 <img src="assets/img/about/about-01.jpg" alt="about-us-img" />
                 <h3>Adam Jensen</h3>
                 <p>
@@ -366,7 +366,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="about__team_item">
+              <div class="about__team-item">
                 <img src="assets/img/about/about-02.jpg" alt="about-us-img" />
                 <h3>Desmond Miles</h3>
                 <p>
@@ -404,7 +404,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="about__team_item">
+              <div class="about__team-item">
                 <img src="assets/img/about/about-03.jpg" alt="about-us-img" />
                 <h3>Scolara Visari</h3>
                 <p>
