feat: add responsive-768px of services

--- a/index.html
+++ b/index.html
@@ -69,24 +69,26 @@
     </svg>
 
     <header class="header">
-      <div class="container">
-        <div class="header__inner">
-          <h1 class="header__logo">Singolo<span>*</span></h1>
-          <nav class="header__menu">
-            <ul>
-              <li><a class="menu-active" href="#slider">Home</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#quote">Contact</a></li>
-            </ul>
-          </nav>
+      <section id="home" class="home for-scroll">
+        <div class="container">
+          <div class="header__inner">
+            <h1 class="header__logo">Singolo<span>*</span></h1>
+            <nav class="header__menu">
+              <ul>
+                <li><a class="menu-active" href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#quote">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
-      </div>
+      </section>
     </header>
 
     <main class="main">
-      <section id="slider" class="slider for-scroll">
+      <section class="slider">
         <div class="container">
           <div class="slider__inner">
             <div class="slider__prev arrow"></div>
