feat: add responsive-768px of about-us & get-a-quote

--- a/index.html
+++ b/index.html
@@ -98,24 +98,24 @@
                   <img
                     src="assets/img/slider/iphone-vertical.svg"
                     alt="Vertical-Iphone"
-                    width="215"
-                    height="458"
+                    width="240"
+                    height="483"
                   />
                 </div>
                 <div class="slider__iphone_vertical-home"></div>
                 <div class="slider__iphone_vertical-pic"></div>
-                <div class="slider__iphone_vertical-shadow"></div>
+                <!-- <div class="slider__iphone_vertical-shadow"></div> -->
                 <div class="slider__iphone_horizontal">
                   <img
                     src="assets/img/slider/iphone-horizontal.svg"
                     alt="iphone-horizontal"
-                    width="458"
-                    height="215"
+                    width="483"
+                    height="240"
                   />
                 </div>
                 <div class="slider__iphone_horizontal-home"></div>
                 <div class="slider__iphone_horizontal-pic"></div>
-                <div class="slider__iphone_horizontal-shadow"></div>
+                <!-- <div class="slider__iphone_horizontal-shadow"></div> -->
               </div>
               <div class="slider__iphone_middle phone">
                 <img
